Remove deprecated constructs and update tests to match.